Showing ML results at the Virtual Closet UI

--- a/app/src/main/res/layout/activity_virtual_closet.xml
+++ b/app/src/main/res/layout/activity_virtual_closet.xml
@@ -12,7 +12,6 @@
         android:id="@+id/buttonAddClothesFromGallery"
         android:layout_width="0dp"
         android:layout_height="40dp"
-        android:layout_marginBottom="1dp"
         android:text="Add Clothes from Gallery"
         app:layout_constraintBottom_toTopOf="@+id/imageView5"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,9 +22,49 @@
         android:id="@+id/imageView5"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/mlLocationText"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonAddClothesFromGallery" />
+
+    <TextView
+        android:id="@+id/mlLocationText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/lexend_exa"
+        android:text="ML Location (debug):"
+        app:layout_constraintBottom_toTopOf="@+id/mlCategoryText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5" />
+
+    <TextView
+        android:id="@+id/mlCategoryText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:fontFamily="@font/lexend_exa"
+        android:text="Category:"
+        app:layout_constraintBottom_toTopOf="@+id/mlScoreText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mlLocationText" />
+
+    <TextView
+        android:id="@+id/mlScoreText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/lexend_exa"
+        android:text="Score (debug):"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mlCategoryText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
